# taxi-eda

./: .gitignore  README.md  dash.py  dash3.py  example.env  pyproject.toml
dashboard/: app.py
notebooks/: analysis.ipynb  eda.ipynb  eda2.ipynb
