[project]
name = "taxi-eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.4.1",
  "duckdb-engine>=0.17.0",
  "jupysql>=0.11.1",
  "jupyterlab>=4.4.10",
  "matplotlib>=3.10.7",
  "pandas>=2.3.3",
  "seaborn>=0.13.2",
  "toml>=0.10.2",
]

[tool.jupysql.SqlMagic]
feedback = true
autopandas = true
displaylimit = 100
